# cell-model-cpu-code

./: .gitignore  README.md
jobs/: run_TP06_lut.sh  run_ensemble.sh  run_math_bench.sh  run_simd_multithread.sh  run_simd_singlethread.sh
models/: Makefile  generate_TP06_RL.sh
src/: CMakeLists.txt  Makefile  bench.c  bench.h  bench_lut.cpp  bench_lut.hpp  bench_util.c  bench_util.h  cellmodel.h  cellmodel_lut.hpp  common.c  common.h  compare.c  compare.h  compare_naive_to_lut.cpp  compare_naive_to_lut.hpp  compare_naive_to_vanilla.c  compare_naive_to_vanilla.h  dump_trace_cmdline.c  dump_trace_cmdline.ggo  dump_trace_cmdline.h  math_macros.h  nosimd.h  rng.cpp  rng.h  schemes.c  schemes.h  solve.c  solve.h  solve_lut.cpp  solve_lut.hpp  trace.c  trace.h
src/cmake/: FindMPFR.cmake
src/math_lib_accuracy/: check.c  common.c  common.h  compute.c
src/math_lib_bench/: bench_exp.c  bench_expm1.c  bench_log.c  bench_pow.c  common.h
src/models/GPB/: GPB_automatic.c  GPB_naive.c  GPB_naive.h  GPB_naive_main.c  GPB_nosimd.c  GPB_nosimd_main.c  GPB_simd.c  GPB_simd.h  GPB_simd_main.c  compare_GPB_naive.c
src/models/JT21/: JT21_automatic.c  JT21_multistep_cell_time.c  JT21_multistep_cell_time.h  JT21_multistep_cell_time_cell.c  JT21_multistep_cell_time_cell.h  JT21_multistep_cell_time_cell_main.c  JT21_multistep_cell_time_cell_nosimd.c  JT21_multistep_cell_time_cell_nosimd_main.c  JT21_multistep_cell_time_main.c  JT21_multistep_cell_time_nosimd.c  JT21_multistep_cell_time_nosimd_main.c  JT21_multistep_time_cell.c  JT21_multistep_time_cell.h  JT21_multistep_time_cell_main.c  JT21_multistep_time_cell_nosimd.c  JT21_multistep_time_cell_nosimd_main.c  JT21_naive.c  JT21_naive.h  JT21_naive_main.c  JT21_nosimd.c  JT21_nosimd_main.c  JT21_simd.c  JT21_simd.h  JT21_simd_main.c  compare_JT21_naive.c
src/models/TP06/: TP06_automatic.c  TP06_dump_trace.c  TP06_dump_trace_lut.cpp  TP06_lut.cpp  TP06_lut.hpp  TP06_lut_main.cpp  TP06_naive.c  TP06_naive.h  TP06_naive_main.c  TP06_nosimd.c  TP06_nosimd_main.c  TP06_simd.c  TP06_simd.h  TP06_simd_lut.cpp  TP06_simd_lut.hpp  TP06_simd_lut_main.cpp  TP06_simd_main.c  compare_TP06_lut.cpp  compare_TP06_naive.c  compare_TP06_simd_lut.cpp
